--- a/Projects/xxdCmdb/web/templates/layout/_laytask.html
+++ b/Projects/xxdCmdb/web/templates/layout/_laytask.html
@@ -21,7 +21,7 @@
             <i class="fa fa-connectdevelop" aria-hidden="true"></i>
             <span>虚拟机装机</span>
         </a>
-        <a id="menu_user_profile" class="menu-item" href="/task_physical.html">
+        <a id="menu_user_profile" class="menu-item" href="#">
             <i class="fa fa-cogs" aria-hidden="true"></i>
             <span>物理机装机</span>
         </a>
