--- a/Projects/xxdCmdb/web/templates/virtual_list.html
+++ b/Projects/xxdCmdb/web/templates/virtual_list.html
@@ -42,52 +42,23 @@
             </div>
         </div>
 
-        <!--新增物理机模态对话框-->
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="exampleModalLabel">新装物理主机</h4>
-              </div>
-              <form id="form1">
-              <div class="modal-body">
-                  <div class="form-group">
-                    <label for="recipient-name" class="control-label">1.主机名</label>
-                    <input type="text" class="form-control" id="recipient-name1">
-                  </div>
-                  <div class="form-group">
-                    <label for="recipient-name" class="control-label">2.IP</label>
-                    <input type="text" class="form-control" id="recipient-name2">
-                  </div>
-                  <div class="form-group">
-                    <label for="recipient-name" class="control-label">3.掩码</label>
-                    <input type="text" class="form-control" id="recipient-name2">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="recipient-name" class="control-label">4.mac地址</label>
-                    <input type="text" class="form-control" id="recipient-name5">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="recipient-name" class="control-label">5.系统版本</label>
-                    <input type="text" class="form-control" id="recipient-name5">
-                  </div>
-
-                  <div class="form-group" style="display: none">
-                    <label for="recipient-name" class="control-label">5.安装时间</label>
-                    <input type="text" class="form-control" id="recipient-name8">
-                  </div>
-              </div>
-              <div class="modal-footer">
-                  <span id="error_message" style="color: red;"></span>
-                  <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                  <button id="save" type="button" class="btn btn-primary">新增</button>
-              </div>
-            </form>
+        <!-- 确认删除虚拟机 -->
+        <div id="del_machine" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                        <h4 class="modal-title">删除虚拟机</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>虚拟机文件删除后不可恢复！</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                        <button id="del_confirm" type="button" class="btn btn-primary">确定</button>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
 
         <div id="connect_info" class="alert alert-info" role="alert" style="margin-bottom: 15px;">
@@ -106,10 +77,6 @@
                   {% endfor %}
             </select>
         </div>
-
-{#        <div class="form-group" style="width: 150px; display: inline-block">#}
-{#            <input id="host_name" type="email" class="form-control" placeholder="主机名">#}
-{#        </div>#}
 
         <div class="form-group" style="display: inline-block;">
             <select class="selectpicker" id="recipient-name4">
@@ -147,7 +114,8 @@
                     <td>宿主机</td>
                     <td>业务</td>
                     <td>状态</td>
-                    <td>备注</td>
+                    <td>管理</td>
+                    <td>操作</td>
                     <td>时间</td>
                 </tr>
             {% for item in data %}
@@ -165,7 +133,16 @@
 	                        <div class="progress-bar progress-bar-success"  role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:100%">100%</div>
                         </div>
                     </td>
-                    <td>详细...</td>
+                    <td>
+                        <div class="progress progress-striped" style="margin-bottom: 0px";>
+                            <div class="progress-bar progress-bar-warning"  role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:100%; cursor: pointer;" onclick="host_manage()">配置</div>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="progress progress-striped" style="margin-bottom: 0px";>
+	                        <div class="progress-bar progress-bar-danger"  role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:100%; cursor: pointer" onclick="host_del({{ item.id }})">删除</div>
+                        </div>
+                    </td>
                     <td>{{ item.ctime|date:"Y-m-d H:i:s" }}</td>
                 </tr>
             {% endfor %}
@@ -241,6 +218,7 @@
                     }
                 });
             });
+
         });
 
 
@@ -329,7 +307,38 @@
             }
 
             $('#add_machine').modal();
+
         }
+
+            function host_manage() {
+
+            }
+
+            function host_del(id) {
+                $('#del_machine').modal();
+
+                $('#del_confirm').click(function () {
+                    $.ajax({
+                        url: 'task_virtual.html',
+                        type: 'POST',
+                        data: {
+                            'host_del_id': id,
+                        },
+                        dataType: 'JSON',
+                        success: function (data_dict) {
+                            if (data_dict.status) {
+                                location.reload();
+                            }else {
+                                $('#connect_info').hide();
+                                $('#connect_failed').show();
+                                $('#message_info').text(data_dict.message);
+
+                            }
+                        }
+                    });
+                });
+
+            }
 
     </script>
 {% endblock %}
