--- a/Projects/xxdCmdb/web/templates/virtual_list.html
+++ b/Projects/xxdCmdb/web/templates/virtual_list.html
@@ -75,6 +75,7 @@
                     <div class="form-group">
                         <input id="change_hostname" type="text" class="form-control" style="width: 298px;margin-bottom: -15px;margin-top: -15px">
                     </div>
+                    <a id="change_error" style="color: red;font-size: 0.1px"></a>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
                         <button id="change_confirm" type="button" class="btn btn-primary">确定</button>
@@ -157,7 +158,7 @@
                     </td>
                     <td>
                         <div class="progress progress-striped" style="margin-bottom: 0px";>
-                            <div class="progress-bar progress-bar-warning"  role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:100%; cursor: pointer;" onclick="host_manage({{ item.id }})">修改主机名</div>
+                            <div class="progress-bar progress-bar-warning"  role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:100%; cursor: pointer;" onclick="host_manage({{ item.id }})">主机名</div>
                         </div>
                     </td>
                     <td>
@@ -349,14 +350,21 @@
                         dataType: 'JSON',
                         success: function (data_dict) {
                             if (data_dict.status) {
-                                $('#change_iid').val(data_dict.id)
+                                $('#change_iid').val(data_dict.id);
                                 $('#change_hostname').val(data_dict.hostname);
                             }else {
                             }
                         }
                     });
 
-                $('#change_hostname').click(function () {
+                $('#change_confirm').click(function () {
+                    var new_hostname = $('#change_hostname').val();
+                    var reg_hostname = /^[a-zA-Z0-9_-]*(\.)*[a-zA-Z0-9_-]*$/;
+                    if(reg_hostname.test(new_hostname)==false){
+                        $('#change_error').text('除 英文、数字、-、_、.、意外，包含非法字符！');
+                        return false;
+                    }
+
                     $.ajax({
                         url: 'task_virtual.html',
                         type: 'POST',
